--- a/modlist.html
+++ b/modlist.html
@@ -18,7 +18,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/respawning-shulkers">Respawning Shulkers (by Serilum)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modern-industrialization">Modern Industrialization (by thetechnici4n)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/stellaris">Stellaris (by st0x0ef)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/stellaris">Stellaris (by StellarisTeam)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jumpy-boats">Jumpy Boats (by LobsterJonn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-piglins">Easy Piglins (by henkelmax)</a></li>
@@ -44,6 +44,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-teams-forge">FTB Teams (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hammer-lib">HammerLib (by Zeith)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farmers-delight">Farmer's Delight (by vectorwing)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/domum-ornamentum">Domum Ornamentum (by OrionOnline)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extreme-reactors">Extreme Reactors (by ZeroNoRyouki)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/equipment-compare">Equipment Compare [Neo/Forge] (by Grend_G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorphic-energistics">Polymorphic Energistics (by ninety)</a></li>
@@ -108,6 +109,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chipped">Chipped (by terrariumearth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/prism-lib">Prism [Neo/Forge] (by Grend_G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/overloaded-armor-bar">Overloaded Armor Bar (by tfarecnim)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/blockui">BlockUI (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rightclickharvest">RightClickHarvest (by jamalam360)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tool-belt">Tool Belt (by gigaherz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mo-structures">Mo' Structures (NeoForge/Fabric) (by ffrannny)</a></li>
@@ -124,6 +126,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/packmenu">PackMenu (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/polymorph">Polymorph (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-quests-forge">FTB Quests (Forge) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/towntalk">TownTalk (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dank-storage">Dank Storage (by tfarecnim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/evilcraft">EvilCraft (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-archaeology">Just Enough Archaeology (by LobsterJonn)</a></li>
@@ -142,6 +145,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/emi-professions-emip">EMI professions (EMIP) (by Mrbysco)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mining-gadgets">Mining Gadgets (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pams-harvestcraft-2-food-core">Pam's HarvestCraft 2 - Food Core (by pamharvestcraft)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/multi-piston">Multi-Piston (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xycraft-override">XyCraft: Override (by Soaryn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-dire-things">Just Dire Things (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cloth-config">Cloth Config API (Fabric/Forge/NeoForge) (by shedaniel)</a></li>
@@ -150,8 +154,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-terminals">Integrated Terminals (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flickerfix">FlickerFix (by MutantGumdrop)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/apothic-spawners">Apothic Spawners (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-magnets">Simple Magnets (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/netherportalfix">NetherPortalFix (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-magnets">Simple Magnets (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/structory-towers">Structory: Towers (by botanydev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-filter-system">FTB Filter System (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/everythingcopper">Everything is Copper (by LobsterJonn)</a></li>
@@ -162,8 +166,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/gravestone-mod">GraveStone Mod (by henkelmax)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/towns-and-towers">Towns and Towers (by Biban_Auriu)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-red">More Red (by Commoble)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/modern-dynamics">Modern Dynamics (by thetechnici4n)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dimstorage">DimStorage (by 3divad99)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/modern-dynamics">Modern Dynamics (by thetechnici4n)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cristel-lib">Cristel Lib (by Cristelknight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dark-mode-everywhere">Dark Mode Everywhere (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-compass">Nature's Compass (by Chaosyr)</a></li>
@@ -180,28 +184,29 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blueflame">Blue Flame Burning (by LobsterJonn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modernfix">ModernFix (by embeddedt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tesseract">Tesseract (by SuperMartijn642)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/get-it-together-drops">Get It Together, Drops! (by bl4ckscor3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aquaculture">Aquaculture 2 (by Shadow)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/get-it-together-drops">Get It Together, Drops! (by bl4ckscor3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/charging-gadgets">Charging Gadgets (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/colorful-hearts">Colorful Hearts (by Terrails)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xycraft-machines">XyCraft: Machines (by Soaryn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rhino">Rhino (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/minecolonies">MineColonies (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2-wireless-terminals">Applied Energistics 2 Wireless Terminals (by Mari_023)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/oreberries-replanted">Oreberries Replanted (by Mrbysco)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/security-craft">Security Craft (by Geforce132)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/structory">Structory (by botanydev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-essentials">FTB Essentials (Forge & Fabric) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agriculture">Mystical Agriculture (by BlakeBr0)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-essentials">FTB Essentials (Forge & Fabric) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pams-harvestcraft-2-trees">Pam's HarvestCraft 2 - Trees (by pamharvestcraft)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farming-for-blockheads">Farming for Blockheads (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-mekanistics">Applied Mekanistics (by ramidzkh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/generatorgalore">Generator Galore (by LobsterJonn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ato">ATO - All the Ores (by ATMTeam)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hyperbox">Hyperbox (by Commoble)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/choicetheorems-overhauled-village">ChoiceTheorem's Overhauled Village (by ChoiceTheorem)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/heyberryshutup">Hey Berry! SHUT UP (by LobsterJonn)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/choicetheorems-overhauled-village">ChoiceTheorem's Overhauled Village (by ChoiceTheorem)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-xmod-compat">FTB XMod Compat (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modular-routers">Modular Routers (by desht_08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-flux">Applied Flux (by GlodBlock)</a></li>
@@ -213,14 +218,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dis-enchanting-table">Dis-Enchanting Table (by Lupin)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/entityculling">Entity Culling Fabric/Forge (by tr7zw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/anvil-never-too-expensive">Anvil Never Too Expensive (by tinytransfem)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/structurize">Structurize (by Raycoms)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agradditions">Mystical Agradditions (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-core">Sophisticated Core (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wormhole-portals">Wormhole (Portals) (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-discord-rpc">Simple Discord RPC (by hypherionsa)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-crafting">Integrated Crafting (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/collective">Collective (by Serilum)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/yeetusexperimentus">Yeetus Experimentus (by Sunekaer)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-crafting">Integrated Crafting (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/comforts">Comforts (Fabric/Forge/Quilt) (by TheIllusiveC4)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/yeetusexperimentus">Yeetus Experimentus (by Sunekaer)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jade">Jade 🔍 (by Snownee)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2-qol-recipes">AE2 QoL Recipes (by Christofmeg)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/terrablender-neoforge">TerraBlender (NeoForge) (by TheAdubbz)</a></li>
